--- a/src/main/resources/templates/addcake.html
+++ b/src/main/resources/templates/addcake.html
@@ -5,6 +5,55 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
  <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" /> 
 </head>
+<style>
+    body {
+        background-color: #ffcccc;
+        color: #333; /* Text color */
+    }
+
+    .container {
+        background-color: #ffffff; /* White background */
+        padding: 20px;
+        border-radius: 10px;
+        margin-top: 50px; /* Increased margin-top value */
+    }
+
+    h1 {
+        color: #e60073; /* Pink header */
+    }
+
+    h6 {
+        color: #e60073; /* Pink text */
+    }
+
+    table {
+        background-color: #ffcccc; /* Light pink table background */
+    }
+
+    th,
+    td {
+        color: #e60073; /* Pink text in table */
+    }
+
+    a {
+        color: #fff; /* White text for links */
+    }
+
+    .btn-primary {
+        background-color: #e60073; /* Pink button */
+        border-color: #e60073; /* Pink button border */
+    }
+
+    .btn-success {
+        background-color: #4CAF50; /* Green button */
+        border-color: #4CAF50; /* Green button border */
+    }
+
+    .btn-danger {
+        background-color: #ff3333; /* Red button */
+        border-color: #ff3333; /* Red button border */
+    }
+</style>
 <body>
 	<div class="container">
 	<h1>Add cake</h1>
